infrastructure/deployment.kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-react
  #namespace: ts-react
spec:
  selector:
    matchLabels:
      app: ts-react # Find and manage all the apps with this label
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: ts-react # Create apps with this label
    spec:
      containers:
        - image: kingofcramers/ts-react # Pull the latest version (:latest)
          imagePullPolicy: Always # Always pull image from Docker Hub
          name: ts-react
          ports:
            - containerPort: 80 # This is purely for informational purposes. 
---
kind: Service
apiVersion: v1
metadata:
  name: ts-react
  #namespace: ts-react
spec:
  type: ClusterIP
  selector:
    app: ts-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
