infrastructure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx # Find and manage all the apps with this label
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: nginx # Create apps with this label
    spec:
      containers:
        - image: kingofcramers/ts-react # Pull the latest version (:latest)
          imagePullPolicy: Always # Always pull image from Docker Hub
          name: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: ts-react
spec:
    type: NodePort
    ports:
      - port: 80
        protocol: TCP
        targetPort: 80
    selector:
      app: nginx
