infrastructure/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-react-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
