infrastructure/loadbalancer.kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
    name: ts-react
spec:
    type: LoadBalancer
    ports:
      - port: 80
        protocol: TCP
        targetPort: 80
    selector:
      app: ts-react
