infrastructure/ingress-alb.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alb-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
spec:
  rules:
  - http:
      paths:
      - path: /graphql
        backend:
          serviceName: typeorm
          servicePort: 1234
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx 
---
apiVersion: v1
kind: Service
metadata:
  name: typeorm
spec:
  type: NodePort
  ports:
  - port: 1234
    targetPort: 1234
  selector:
    app: typeorm
