infrastructure/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-nginx.com 
    http:
      paths:
        - path: 
          backend:
            serviceName: nginx
            servicePort: 80
  - host: ts-react.com # Use our /etc/hosts file to point to our Minikube cluster
    http:
      paths:
        - path: # Send our traffic to port 80 through the ClusterIP service ts-react
          backend:
            serviceName: ts-react
            servicePort: 80
